# route-weather-webapp

./: .gitignore  README.md  docker-compose.yml  start.sh
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/ui/: App.tsx  MapView.tsx  ResultsPanel.tsx  styles.css
