[project]
name = "route-weather-backend"
version = "0.1.0"
description = "Route (Amap) + waypoint city weather timeline API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
]

[tool.uvicorn]
factory = false

[tool.ruff]
line-length = 100
